syntax = "proto3";
package proto;
option go_package = "./";

message AuthRequest{
    string email = 1;
    string password = 2;
}

message AuthResponse{
    bool authenticated = 1;
    string message = 2;
}

service AuthService{
    rpc AuthenticateUser(AuthRequest) returns (AuthResponse) {}
}